<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_create_a_task"
        tools:context=".presentation.task.activity.TaskActivity">


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/task_appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleCentered="true" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:id="@+id/section_name_and_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_32sdp"
            android:paddingTop="@dimen/_16sdp"
            app:layout_constraintTop_toBottomOf="@id/app_bar">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="@string/name"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:backgroundTint="#80D7DDF0"
                android:fontFamily="@font/poppins_semibold"
                android:hint="@string/enter_the_task_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/poppins"
                android:text="@string/date"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

            <EditText
                android:id="@+id/et_date_piker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:backgroundTint="#80D7DDF0"
                android:fontFamily="@font/poppins_semibold"
                android:hint="@string/date_picker"
                android:textColor="@color/white"
                android:textSize="@dimen/_18ssp" />
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_24sdp"
            android:layout_marginBottom="@dimen/_72sdp"
            app:cardBackgroundColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/section_name_and_date"
            app:shapeAppearanceOverlay="@style/TopCornerCard"
            app:strokeWidth="0dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="@dimen/_32sdp">

                    <LinearLayout
                        android:id="@+id/section_time_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_24sdp"
                        android:orientation="horizontal"
                        app:layout_constraintTop_toTopOf="parent">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/start_time"
                                android:textColor="#BFC8E8"
                                android:textSize="@dimen/_12ssp" />

                            <TextView
                                android:id="@+id/picker_start_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_6sdp"
                                android:fontFamily="@font/poppins_semibold"
                                android:textColor="@color/header_text_color"
                                android:textSize="@dimen/_18ssp"
                                tools:text="01:25 pm" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/_32sdp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins"
                                android:text="@string/end_time"
                                android:textColor="#BFC8E8"
                                android:textSize="@dimen/_12ssp" />

                            <TextView
                                android:id="@+id/picker_end_time"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="@dimen/_6sdp"
                                android:fontFamily="@font/poppins_semibold"
                                android:textColor="@color/header_text_color"
                                android:textSize="@dimen/_18ssp"
                                tools:text="03:20 pm" />
                        </LinearLayout>
                    </LinearLayout>

                    <com.google.android.material.divider.MaterialDivider
                        android:id="@+id/time_divider"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        app:dividerColor="#BFC8E8"
                        app:layout_constraintTop_toBottomOf="@id/section_time_picker" />

                    <LinearLayout
                        android:id="@+id/section_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_32sdp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/time_divider">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/description"
                            android:textColor="#BFC8E8"
                            android:textSize="@dimen/_12ssp" />

                        <EditText
                            android:id="@+id/et_description"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_8sdp"
                            android:backgroundTint="#80D7DDF0"
                            android:fontFamily="@font/poppins_medium"
                            android:hint="@string/date_picker"
                            android:paddingBottom="@dimen/_24sdp"
                            android:textColor="@color/header_text_color"
                            android:textSize="@dimen/_14ssp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:orientation="vertical"
                        app:layout_constraintTop_toBottomOf="@id/section_description">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/poppins"
                            android:text="@string/category"
                            android:textColor="#BFC8E8"
                            android:textSize="@dimen/_14ssp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rv_categories"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_6sdp"
                            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                            app:spanCount="3"
                            tools:itemCount="6"
                            tools:listitem="@layout/item_category" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btn_add_or_edit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_48sdp"
            android:layout_marginHorizontal="@dimen/_32sdp"
            android:layout_marginBottom="@dimen/_24sdp"
            android:text="@string/create_task"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>