<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="32dp"
        tools:context=".presentation.main.fragments.home.HomeFragment"
        tools:showIn="@layout/activity_main">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/welcome_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="27dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Hello Abdallah!"
                android:textColor="@color/header_text_color"
                android:textSize="36sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sub_welcome_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins"
                android:text="Have a nice day."
                android:textColor="#8A2E3A59"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/welcome_message" />

            <LinearLayout
                android:id="@+id/filtration_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:orientation="horizontal"
                android:weightSum="3"
                app:layout_constraintTop_toBottomOf="@id/sub_welcome_message">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_75sdp"
                    app:strokeColor="@null"
                    app:strokeWidth="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:fontFamily="@font/poppins_semibold"
                        android:text="@string/my_tasks"
                        android:textSize="@dimen/_9ssp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#E5EAFC"
                    app:cardCornerRadius="@dimen/_75sdp"
                    app:strokeColor="@null"
                    app:strokeWidth="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/in_progress"
                        android:textSize="12sp" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:cardBackgroundColor="#E5EAFC"
                    app:cardCornerRadius="75dp"
                    app:strokeColor="@null"
                    app:strokeWidth="0dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:fontFamily="@font/poppins"
                        android:text="@string/completed"
                        android:textSize="12sp" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/projects_vp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:paddingEnd="@dimen/_64sdp"
                android:paddingStart="@dimen/_6sdp"
                app:layout_constraintTop_toBottomOf="@id/filtration_section" />

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dots_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:dotsColor="#D8DEF3"
                app:dotsCornerRadius="8dp"
                app:dotsSize="16dp"
                app:dotsSpacing="4dp"
                app:dotsWidthFactor="2.5"
                app:layout_constraintEnd_toEndOf="@id/projects_vp"
                app:layout_constraintStart_toStartOf="@id/projects_vp"
                app:layout_constraintTop_toBottomOf="@id/projects_vp"
                app:progressMode="true"
                app:selectedDotColor="#9C2CF3" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@id/dots_indicator">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:fontFamily="@font/poppins_semibold"
                    android:text="@string/progress"
                    android:textColor="@color/header_text_color"
                    android:textSize="28sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:listitem="@layout/item_task" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>